# tmxlite

./: .codedocs  .gitignore  .travis.yml  Android.mk  LICENSE  appveyor.yml  meson.build  meson_options.txt  readme.md  tmxlite.sln
.github/workflows/: cmake.yml  msbuild.yml
OpenGLExample/: CMakeLists.txt  meson.build  readme.md
OpenGLExample/assets/: platform.tmx
OpenGLExample/cmake/modules/: FindGLM.cmake  FindTMXLITE.cmake
OpenGLExample/src/: CMakeLists.txt  GLCheck.hpp  GLExtensions.cpp  GLExtensions.hpp  Game.cpp  Game.hpp  MapLayer.cpp  MapLayer.hpp  OpenGL.cpp  Shader.inl  main.cpp
ParseTest/: CMakeLists.txt  ParseTest.vcxproj  meson.build
ParseTest/images/tilemap/: platform.tsx  tileset.txt
ParseTest/maps/: platform.tmx  tilesettest.tmx
ParseTest/src/: config.h.in  main.cpp
SDL2Example/: CMakeLists.txt  SDL2Example.vcxproj  SDL2Example.vcxproj.filters  readme.md
SDL2Example/assets/: demo.tmx
SDL2Example/assets/images/tilemap/: platform.tsx
SDL2Example/cmake/modules/: FindTMXLITE.cmake
SDL2Example/src/: MapLayer.cpp  MapLayer.hpp  Texture.cpp  Texture.hpp  main.cpp
SFML3Example/: CMakeLists.txt  SFMLExample.vcxproj.filters  readme.md
SFML3Example/SFMLExample/: meson.build
SFML3Example/SFMLExample/assets/: demo.tmx
SFML3Example/SFMLExample/src/: SFMLOrthogonalLayer.hpp  main.cpp
SFML3Example/src/: SFMLOrthogonalLayer.hpp
SFMLExample/: CMakeLists.txt  SFMLExample.vcxproj  readme.md
SFMLExample/assets/: demo.tmx  platform.tmx
SFMLExample/cmake/modules/: FindTMXLITE.cmake
SFMLExample/src/: SFMLOrthogonalLayer.hpp  main.cpp
tmxlite/: CMakeLists.txt  meson.build  tmxlite.pc.in  tmxlite.vcxproj  tmxlite.vcxproj.filters
tmxlite-android/: tmxlite-android.vcxproj  tmxlite-android.vcxproj.filters
tmxlite/cmake/modules/: FindPUGIXML.cmake
tmxlite/cmake/toolchains/: ios.toolchain.cmake
tmxlite/documentation/: Doxyfile
tmxlite/include/render/: SFMLOrthogonalLayer.hpp
tmxlite/include/tmxlite/: Android.hpp  Config.hpp  FreeFuncs.hpp  ImageLayer.hpp  Layer.hpp  LayerGroup.hpp  Log.hpp  Map.hpp  Object.hpp  ObjectGroup.hpp  ObjectTypes.hpp  Property.hpp  TileLayer.hpp  Tileset.hpp  Types.hpp  Types.inl
tmxlite/include/tmxlite/detail/: Android.hpp  Log.hpp  pugiconfig.hpp
tmxlite/src/: CMakeLists.txt  FreeFuncs.cpp  ImageLayer.cpp  LayerGroup.cpp  Map.cpp  Object.cpp  ObjectGroup.cpp  ObjectTypes.cpp  Property.cpp  TileLayer.cpp  Tileset.cpp  meson.build  miniz.c  miniz.h  pugixml.cpp
tmxlite/src/detail/: pugixml.LICENSE  pugixml.cpp
